<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_title">Razonamiento Matemático</string>
    <string name="see_theory">Ver Teoría</string>
    <string name="solve_problem">Resolver Problema</string>
    <string name="letter_a">A</string>
    <string name="letter_b">B</string>
    <string name="letter_c">C</string>
    <string name="letter_d">D</string>
    <string name="options_title">Opciones</string>
    <string name="label_difficulty">Dificultad del Problema:</string>
    <string-array name="dificultad_opciones">
        <item>@string/options_easy</item>
        <item>@string/options_normal</item>
        <item>@string/options_hard</item>
    </string-array>
    <string name="options_easy">Fácil</string>
    <string name="options_normal">Normal</string>
    <string name="options_hard">Difícil</string>
    <string name="label_tipo_problema">Tipo de Problema:</string>
    <string name="close">Cerrar</string>
    <string name="button_comprobar">COMPROBAR</string>
    <string name="button_nuevo">NUEVO</string>
    <string name="button_inicio">Inicio</string>
    <string name="button_opciones">Opciones</string>
    <string name="button_premium">Premium</string>
    <string name="button_compartir">Compartir</string>
    <string name="solution">SOLUCIÓN</string>
    <string name="back">ATRÁS</string>
    <string name="solution_icon">Icono de solución</string>
    <string name="back_icon">Icono de atrás</string>
    <string name="ver_solucion">VER SOLUCIÓN</string>
    <string name="tip_title">Consejo</string>
    <string name="answer_result_image">Imagen Resultado</string>
    <string name="selecciona_opcion">Por favor, selecciona una opción.</string>
    <string name="tachar_text">Tachar</string>
    <string name="tip_text">Consejo</string>
    <string name="precalculate_text">Avance</string>
    <string name="send_problem_text">Enviar</string>
    <string name="logo_description">Logo de Razona</string>
</resources>