<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@android:color/white">

    <!-- AppBar con imagen de fondo -->
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <include
                layout="@layout/image_pathbar" />

        <include
                layout="@layout/l2_layout_options_header_content"/>
    </RelativeLayout>

    <!-- Título dificultad -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options_difficulty"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="24dp"
    />

    <!-- Grupo de RadioButtons para la selección de la dificultad -->
    <RadioGroup
            android:id="@+id/difficultyRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginStart="24dp"
            android:layout_weight="1">

        <RadioButton
                android:id="@+id/radio_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/options_easy"
                android:checked="true"
                android:layout_marginBottom="10dp"/>

        <RadioButton
                android:id="@+id/radio_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/options_normal"
                android:layout_marginBottom="10dp"/>

        <RadioButton
                android:id="@+id/radio_hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/options_hard" />
    </RadioGroup>

    <!-- Bottom Navigation Bar -->
    <include
            android:id="@+id/bottom_navigation"
            layout="@layout/bottom_navigation_view"/>

</LinearLayout>
